fix(wearable): add color code of circular index scrollbar.

--- a/tau/src/css/profile/wearable/changeable/theme-circle/theme.changeable.less
+++ b/tau/src/css/profile/wearable/changeable/theme-circle/theme.changeable.less
@@ -18,6 +18,16 @@
 @color_circleprogressbar_bg: B065L3;
 @color_circleprogressbar_value: B065L2;
 
+/***************************************************************************
+                  circular index scrollbar
+***************************************************************************/
+@color_circularindexscrollbar_bg: B0722;
+@color_circularindexscrollbar_text_normal: T0311;
+@color_circularindexscrollbar_text_selected: T0311P;
+
+@color_circularindexscrollbar_indicator_bg: B0731;
+@color_circularindexscrollbar_indicator_text: T0312P;
+
 /****************************************************************************
 		Progress Bar
 ****************************************************************************/
